<resources>
    <string name="app_name">EntregasYaDriver</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="email">Correo electronico</string>
    <string name="document_type">Tipo documento</string>
    <string name="document_number">Número documento</string>
    <string name="contrase_a">Contraseña</string>
    <string name="signin">Iniciar sesión</string>
    <string name="wait_please">Espere un momento por favor.</string>
    <string name="name">Nombre</string>
    <string name="last_name">Apellido</string>
    <string name="document">N° documento</string>
    <string name="phone">Teléfono</string>
    <string name="address">Dirección</string>
    <string name="register">Registrarme</string>
    <string name="password">Contraseña</string>
    <string name="confirm_password">Confirmar contraseña</string>
    <string name="registerme">Regístrate</string>
    <string name="not_member">¿No tienes cuenta? <b>Regístrate</b></string>
    <string name="all_obligatory">Todos los campos son obligatorios.</string>
    <string name="have_account">¿Tienes cuenta? <b>Inicia sesión</b></string>
    <string name="title_activity_initial">InitialActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="username">Usuario</string>
    <string name="pickup">Recojo</string>
    <string name="delivery">Entrega</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="orders">Mis Pedidos</string>
    <string name="profile">Perfil</string>
    <string name="new_order">Nuevo pedido</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="address_pickup">Ingrese dirección de recojo</string>
    <string name="address_delivery">Ingrese dirección de entrega</string>
    <string name="example_address">Av Abancay #1722, Interior B, 2322</string>
    <string name="title_pickup">Datos de recojo</string>
    <string name="title_delivery">Datos de entrega</string>
    <string name="reference">Referencia</string>
    <string name="example_reference">A dos cuadras del parque principal</string>
    <string name="department">Departamento</string>
    <string name="province">Provincia</string>
    <string name="district">Distrito</string>
    <string name="ubigeo">Ubigeo</string>
    <string name="example_ubigeo">departamento/provincia/distrito</string>
    <string name="accept">ACEPTAR</string>
    <string name="info_producto">Datos del producto</string>
    <string name="example_product">TV 41\' Samsung</string>
    <string name="product_name">Nombre producto</string>
    <string name="quantity">Cantidad</string>
    <string name="packing">Empaque</string>
    <string name="contact_name">Nombre del contacto</string>
    <string name="contact_phone">Teléfono del contacto</string>
    <string name="plate_number">PLACA</string>
    <string name="driver">Chofer</string>
    <string name="title_activity_manage_order">ManageOrderActivity</string>
    <string name="info">Info</string>
    <string name="gallery">Galeria</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status">Estado</string>
    <string name="call">Llamar</string>


<!--    <string name="app_name">Location Updates ForegroundService</string>-->

    <string name="launch_activity">Launch activity</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>

    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>

    <string name="location_updated">Location Updated: %1$s</string>
</resources>
