<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:orientation="vertical"
    android:layout_height="wrap_content"
    android:paddingStart="20dp"
    android:paddingEnd="10dp"
    android:paddingTop="10dp"
    android:paddingBottom="10dp"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinner_department"
        android:text="@string/department" />
    <Spinner
        android:id="@+id/spinner_department"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinner_province"
        android:text="@string/province"
        />
    <Spinner
        android:id="@+id/spinner_province"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:labelFor="@+id/spinner_district"
        android:text="@string/district"
        />
    <Spinner
        android:id="@+id/spinner_district"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:layout_width="wrap_content"
        android:background="@drawable/sty_button_secondary"
        android:paddingHorizontal="20dp"
        android:id="@+id/save_ubigeo"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:text="@string/accept"
        />

</LinearLayout>