<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context=".ui.profile.ProfileFragment">

    <RelativeLayout
        android:id="@+id/container_image_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textColor="#000">

        <ImageView
            android:id="@+id/imageUserConf"
            android:layout_width="130dp"
            android:src="@drawable/persona_sin_foto"
            android:layout_height="130dp" />

        <ImageView
            android:id="@+id/showManageConf"
            android:layout_width="35dp"
            android:padding="3dp"
            android:layout_height="35dp"
            android:background="@drawable/background_radious"
            android:layout_alignEnd="@+id/imageUserConf"
            android:layout_alignBottom="@+id/imageUserConf"
            android:clickable="false"
            android:focusable="false"
            android:src="@android:drawable/ic_menu_camera" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/container_image_profile"
        android:layout_marginTop="10dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/name"/>
        <TextView
            android:id="@+id/profile_first_name"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Carlos"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/last_name"/>
        <TextView
            android:id="@+id/profile_last_name"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Farro Diaz"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/email"/>
        <TextView
            android:id="@+id/profile_email"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="fdcarlosd1@gmail.com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/document_type"/>
        <TextView
            android:id="@+id/profile_document_type"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="DNI"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/document_number"/>
        <TextView
            android:id="@+id/profile_document_number"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="73147683"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/address"/>
        <TextView
            android:id="@+id/profile_address"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Jirón Enrique Barron 1323 Lince"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:textColor="#000"
            android:textAllCaps="true"
            android:text="@string/phone"/>
        <TextView
            android:id="@+id/profile_phone"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:textColor="#000"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="Jirón Enrique Barron 1323 Lince"/>
    </LinearLayout>
</RelativeLayout>