<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="60dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">
        <ImageView
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="30dp"
            android:src="@drawable/logoya"
            />
        <EditText
            android:id="@+id/login_username"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:background="@drawable/input_style"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_action_person"
            android:drawablePadding="10dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:textColorHint="#FFF"
            android:textColor="#FFF"
            android:lines="1"
            android:singleLine="true"
            android:textSize="15sp"
            android:layout_marginBottom="20sp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleTint="@color/colorPrimary"
            app:hintEnabled="false"
            app:passwordToggleEnabled="true">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/login_password"
                app:hintEnabled="false"
                android:textColorHint="#FFF"
                android:padding="10dp"
                android:drawablePadding="10dp"
                android:layout_width="match_parent"
                android:background="@drawable/input_style"
                android:hint="@string/contrase_a"
                android:textColor="#FFF"
                android:drawableStart="@drawable/ic_action_lock"
                android:inputType="textPassword"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:lines="1"
                android:textSize="15sp"
                android:layout_marginBottom="30sp"/>
        </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/login_access"
            android:background="@drawable/sty_button_primary"
            android:textColor="#FFF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingHorizontal="40dp"
            android:layout_marginBottom="50dp"
            android:text="@string/signin"
            />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:id="@+id/login_register"
        android:text="@string/not_member"
        android:layout_alignParentBottom="true"
        android:textColor="#FFF"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        />

</RelativeLayout>